--- a/app/templates/home/parent_dashboard.html
+++ b/app/templates/home/parent_dashboard.html
@@ -5,7 +5,7 @@
     <div class="center">
         <div class="page-header">
             <h1>
-                {{ user.last_name }} {{ user.first_name }} {{ user.middle_name }}
+                {{ user.fullname }}
                 <small>(parent)</small>
             </h1>
         </div>
@@ -26,7 +26,7 @@
                     {% for children in childrens %}
                         <li class="list-group-item">
                             <a href="{{ url_for('home.student_dashboard',id=children.studentParent.id) }}">
-                                {{ children.studentParent.last_name }} {{ children.studentParent.first_name }} {{ children.studentParent.middle_name }}
+                                {{ children.studentParent.fullname }}
                             </a>
                         </li>
                     {% endfor %}
