--- a/app/templates/home/student_dashboard.html
+++ b/app/templates/home/student_dashboard.html
@@ -5,7 +5,7 @@
     <div class="center">
         <div class="page-header">
             <h1>
-                {{ user.last_name }} {{ user.first_name }} {{ user.middle_name }}
+                {{ user.fullname }}
                 <small>(student)</small>
             </h1>
         </div>
@@ -35,7 +35,7 @@
                     {% for parent in parents %}
                         <li class="list-group-item">
                             <a href="{{ url_for('home.parent_dashboard',id=parent.parentStudent.id) }}">
-                                {{ parent.parentStudent.last_name }} {{ parent.parentStudent.first_name }} {{ parent.parentStudent.middle_name }}
+                                {{ parent.parentStudent.fullname }}
                             </a>
                         </li>
                     {% endfor %}
