--- a/app/templates/home/teacher_dashboard.html
+++ b/app/templates/home/teacher_dashboard.html
@@ -5,7 +5,7 @@
     <div class="center">
         <div class="page-header">
             <h1>
-                {{ user.last_name }} {{ user.first_name }} {{ user.middle_name }}
+                {{ user.fullname }}
                 <small>(teacher)</small>
             </h1>
         </div>
