--- a/app/templates/admin/teachers/list.html
+++ b/app/templates/admin/teachers/list.html
@@ -3,72 +3,73 @@
     Teachers info
 {% endblock %}
 {% block body %}
-<div class="outer">
-    <div class="middle">
-        <div class="center">
-            <div class="page-header">
-                <h1> Teachers info </h1>
-            </div>
+    <div class="outer">
+        <div class="middle">
+            <div class="center">
+                <div class="page-header">
+                    <h1> Teachers info </h1>
+                </div>
 
-            {% if teachers %}
-                <table class="table table-striped table-bordered">
-                    <thead>
-                    <tr>
-                        <th width="50%"> Teacher </th>
-                        <th width="25%"> List of Subjects </th>
-                        <th width="25%"> Bind to Classroom </th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for teacher in teachers %}
-                        {% if teacher.is_admin==False %}
-                            <tr>
-                                <td>
-                                    <a href="{{ url_for('home.teacher_dashboard',id=teacher.id) }}">
-                                        {{ teacher }}
-                                    </a>
-                                </td>
-                                <td>
-                                    {% if teacher.teacherToSubject.all() %}
-                                        <a href="{{ url_for('admin.edit_teacher_subjects', id_teacher=teacher.id) }}">
-                                            <i class="fa fa-pencil"></i> edit subjects list
+                {% if teachers %}
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th width="50%"> Teacher</th>
+                            <th width="25%"> List of Subjects</th>
+                            <th width="25%"> Bind to Classroom</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for teacher in teachers %}
+                            {% if teacher.is_admin==False %}
+                                <tr>
+                                    <td>
+                                        <a href="{{ url_for('home.teacher_dashboard',id=teacher.id) }}">
+                                            {{ teacher }}
                                         </a>
-                                        {% for subjects in teacher.teacherToSubject.all() %}
-                                            <div>{{ subjects.subjects }}</div>
-                                        {% endfor %}
-                                    {% else %}
-                                        <a href="{{ url_for('admin.add_teacher_subjects', id_teacher=teacher.id) }}">
-                                            <i class="fa fa-plus"></i> add subject
-                                        </a>
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    {% if teacher.teacherClassroom.all() %}
-                                        <a href="{{ url_for('admin.edit_teacher_classroom', id_teacher=teacher.id) }}">
-                                            <i class="fa fa-chain"></i> edit bind
-                                        </a>
-                                        {% for classroom in teacher.teacherClassroom.all() %}
-                                            <div>{{ classroom.classrooms.name }} ({{ classroom.classrooms.room_specializations.name }})</div>
-                                        {% endfor %}
-                                        <a href="{{ url_for('admin.delete_teacher_classroom', id_teacher=teacher.id) }}">
-                                            <i class="fa fa-chain-broken"></i> remove bind
-                                        </a>
-                                    {% else %}
-                                        <a href="{{ url_for('admin.add_teacher_classroom', id_teacher=teacher.id) }}">
-                                            <i class="fa fa-chain"></i> add link
-                                        </a>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                        {% endif %}
-                    {% endfor %}
-                    </tbody>
-                </table>
-            {% else %}
-                <div class="alert alert-warning" role="alert">No teachers.</div>
-            {% endif %}
-            <br>
+                                    </td>
+                                    <td>
+                                        {% if teacher.teacherToSubject.all() %}
+                                            <a href="{{ url_for('admin.edit_teacher_subjects', id_teacher=teacher.id) }}">
+                                                <i class="fa fa-pencil"></i> edit subjects list
+                                            </a>
+                                            {% for subjects in teacher.teacherToSubject.all() %}
+                                                <div>{{ subjects.subjects }}</div>
+                                            {% endfor %}
+                                        {% else %}
+                                            <a href="{{ url_for('admin.add_teacher_subjects', id_teacher=teacher.id) }}">
+                                                <i class="fa fa-plus"></i> add subject
+                                            </a>
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        {% if teacher.teacherClassroom.first() %}
+                                            <a href="{{ url_for('admin.edit_teacher_classroom', id_teacher=teacher.id) }}">
+                                                <i class="fa fa-chain"></i> edit bind
+                                            </a><br>
+                                            <span class="label label-success">
+                                                {{ teacher.teacherClassroom.first().classrooms.name }}
+                                                ({{ teacher.teacherClassroom.first().classrooms.room_specializations.name }})
+                                            </span><br>
+                                            <a href="{{ url_for('admin.delete_teacher_classroom', id_teacher=teacher.id) }}">
+                                                <i class="fa fa-chain-broken"></i> remove bind
+                                            </a>
+                                        {% else %}
+                                            <a href="{{ url_for('admin.add_teacher_classroom', id_teacher=teacher.id) }}">
+                                                <i class="fa fa-chain"></i> add link
+                                            </a>
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                            {% endif %}
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                {% else %}
+                    <div class="alert alert-warning" role="alert">No teachers.</div>
+                {% endif %}
+                <br>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
