--- a/app/templates/admin/roles/roles.html
+++ b/app/templates/admin/roles/roles.html
@@ -51,9 +51,7 @@
                         </tbody>
                     </table>
                 {% else %}
-                    <div style="text-align: center">
-                        <h3> No roles have been added. </h3>
-                    </div>
+                    <div class="alert alert-warning" role="alert">No roles have been added.</div>
                 {% endif %}
 
                 <div style="text-align: center">
