--- a/app/templates/admin/plans/list.html
+++ b/app/templates/admin/plans/list.html
@@ -11,6 +11,12 @@
                 </div>
 
                 <div style="text-align: center">
+                    <a href="{{ url_for('admin.add_plan_day') }}" class="btn btn-default btn-lg">
+                        <i class="fa fa-plus"></i> Add plan day
+                    </a>
+                </div>
+                <br>
+                <div style="text-align: center">
                     <a href="{{ url_for('admin.add_plan') }}" class="btn btn-default btn-lg">
                         <i class="fa fa-plus"></i> Add plan
                     </a>
